--- a/web/src/pages/TeacherList/styles.css
+++ b/web/src/pages/TeacherList/styles.css
@@ -11,49 +11,6 @@
   color: var(--color-text-in-primary);
 }
 
-#search-teachers .input-block {
-  position: relative;
-}
-
-#search-teachers .input-block:not(:first-child) {
-  margin-top: 1.4rem;
-}
-
-#search-teachers .input-block label {
-  font-size: 1.4rem;
-}
-
-#search-teachers .input-block input {
-  width: 100%;
-  height: 5.6rem;
-
-  background-color: var(--color-input-background);
-
-  border: 1px solid var(--color-line-in-white);
-  border-radius: 0.8rem;
-  outline: 0;
-
-  padding: 0 1.6rem;
-  margin-top: 0.8rem;
-
-  font: 1.6rem Archivo;
-}
-
-#search-teachers .input-block:focus-within::after {
-  position: absolute;
-
-  background-color: var(--color-primary-light);
-
-  width: calc(100% - 3.2rem);
-  height: 2px;
-
-  left: 1.6rem;
-  right: 1.6rem;
-  bottom: 0;
-
-  content: "";
-}
-
 #page-teacher-list main {
   margin: 3.2rem auto;
   width: 90%;
@@ -74,7 +31,8 @@
     bottom: -28px;
   }
 
-  #search-teachers .input-block:not(:first-child) {
+  #search-teachers .input-block:not(:first-child), 
+  #search-teachers .select-block {
     margin-top: 0;
   }
 
