--- a/web/src/pages/TeacherForm/styles.css
+++ b/web/src/pages/TeacherForm/styles.css
@@ -18,7 +18,7 @@
   margin: -3.2rem auto 3.2rem;
   padding-top: 6.4rem;
 
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #page-teacher-form main label {
