--- a/web/src/pages/TeacherList/styles.css
+++ b/web/src/pages/TeacherList/styles.css
@@ -23,6 +23,7 @@
 
   #search-teachers {
     position: absolute;
+    width: 100%;
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
