--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -17,6 +17,7 @@
   --color-button-text: #ffffff;
   --color-box-base: #ffffff;
   --color-box-footer: #fafafc;
+  --color-hover-background: #EBEBF5;
 
   font-size: 60%;
 }
@@ -52,6 +53,10 @@ body, input, button, textarea {
 .container {
   width: 90vw;
   max-width: 700px;
+}
+
+.text-muted {
+  color: #c1bccc;
 }
 
 @media (min-width: 700px) {
