--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -18,6 +18,7 @@
   --color-box-base: #ffffff;
   --color-box-footer: #fafafc;
   --color-hover-background: #EBEBF5;
+  --color-text-muted: #c1bccc;
 
   font-size: 60%;
 }
