--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -46,6 +46,8 @@
 
   font-size: 1.6rem;
   line-height: 2.8rem;
+
+  margin-bottom: 2rem;
 }
 
 .teacher-item footer {
@@ -92,6 +94,55 @@
   background-color: var(--color-secondary-dark);
 }
 
+.schedules-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem 6rem 0 3rem;
+  margin-bottom: 1rem;
+  color: var(--color-text-complement);
+  border-top: 1px solid var(--color-line-in-white);
+  font-size: 1.4rem;
+}
+
+.schedules {
+  padding: 0 2rem;
+}
+
+.schedule {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid var(--color-line-in-white);
+  padding: 1rem;
+  border-radius: 0.8rem;
+  background-color: var(--color-input-background);
+}
+
+.disabled {
+  opacity: 0.4;
+}
+
+.schedule:not(:first-child) {
+  margin-top: .7rem;
+}
+
+.schedule > div {
+  width: 10rem;
+  display: flex;
+  justify-content: left;
+}
+
+.info-name {
+  display: none;
+  font-size: 1.2rem;
+  color: var(--color-text-complement);
+}
+
+.info-data {
+  text-align: left;
+  font-weight: bold;
+  font-size: 1.6rem;
+}
+
 @media (min-width: 700px) {
   .teacher-item header,
   .teacher-item footer {
@@ -115,5 +166,36 @@
   }
   .teacher-item footer a img {
     margin-right: 1.6rem;
+  }
+
+  .schedules-header {
+    display: none;
+  }
+
+  .schedules {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    column-gap: 1rem;
+  }
+
+  .schedule {
+    flex-direction: column;
+  }
+
+  .schedule:not(:first-child) {
+    margin: 0;
+  }
+
+  .schedule > div {
+    flex-direction: column;
+  }
+
+  .info-name {
+    display: initial;
+    margin-top: 0.5rem;
+  }
+
+  .info-data {
+    margin-bottom: 0.5rem;
   }
 }
